src/test/ui/issues/issue-20616-8.stderr
error: expected one of `>`, identifier, or lifetime, found `,`
  --> $DIR/issue-20616-8.rs:43:16
   |
LL | type Type_8<'a,,> = &'a (); //~ error: expected one of `>`, identifier, or lifetime, found `,`
   |                ^ expected one of `>`, identifier, or lifetime here

error: aborting due to previous error

